2012-06-17  Patrick Gansterer  <paroga@webkit.org>

        [WIN] Simplify implementation of currentTime()
        https://bugs.webkit.org/show_bug.cgi?id=83156

        Reviewed by Brent Fulgham.

        Use GetSystemTimeAsFileTime() instead of ftime().
        This avoids an unneeded call to the MS CRT and
        brings the Win/WinCE code closer together.

        * wtf/CurrentTime.cpp:
        (WTF::lowResUTCTime):
        (WTF::currentTime):

2012-06-15  Tony Payne  <tpayne@chromium.org>

        [chromium] Add iccjpeg and qcms to chromium port.
        https://bugs.webkit.org/show_bug.cgi?id=81974

        * wtf/Platform.h: Add Chromium USE defines for ICCJPEG and QCMSLIB
        to each Chromium platform, excluding Android.

        Reviewed by Adam Barth.

2012-06-14  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r120393.
        http://trac.webkit.org/changeset/120393
        https://bugs.webkit.org/show_bug.cgi?id=89163

        breaks cr-mac build (Requested by morrita on #webkit).

        * wtf/Platform.h:

2012-06-14  Tony Payne  <tpayne@chromium.org>

        [chromium] Add iccjpeg and qcms to chromium port.
        https://bugs.webkit.org/show_bug.cgi?id=81974

        * wtf/Platform.h: Add Chromium USE defines for ICCJPEG and QCMSLIB
        to each Chromium platform, excluding Android.

        Reviewed by Adam Barth.

2012-06-14  Yong Li  <yoli@rim.com>

        [BlackBerry] Implement computeRAMSize for QNX
        https://bugs.webkit.org/show_bug.cgi?id=89110

        Reviewed by Rob Buis.

        * wtf/RAMSize.cpp:
        (WTF::computeRAMSize):

2012-06-14  Geoffrey Garen  <ggaren@apple.com>

        ARMv7 should support spinlocks
        https://bugs.webkit.org/show_bug.cgi?id=88957

        Reviewed by Darin Adler.

        More info @ http://infocenter.arm.com/help/topic/
        com.arm.doc.genc007826/Barrier_Litmus_Tests_and_Cookbook_A08.pdf

        * wtf/Atomics.h:
        (WTF::memoryBarrierAfterLock):