@@ -467,18 +467,19 @@
 /* USE(SKIA) for Win/Linux/Mac/Android */
 #if PLATFORM(CHROMIUM)
 #if OS(DARWIN)
+#if USE(SKIA_ON_MAC_CHROMIUM)
 #define WTF_USE_SKIA 1
+#else
+#define WTF_USE_CG 1
+#endif
 #define WTF_USE_ATSUI 1
 #define WTF_USE_CORE_TEXT 1
 #define WTF_USE_ICCJPEG 1
-#define WTF_USE_QCMSLIB 1
 #elif OS(ANDROID)
 #define WTF_USE_SKIA 1
 #else
 #define WTF_USE_SKIA 1
 #define WTF_USE_CHROMIUM_NET 1
-#define WTF_USE_ICCJPEG 1
-#define WTF_USE_QCMSLIB 1
 #endif
 #endif
 
